--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/icons": "^4.11.3",
@@ -16,6 +17,10 @@
     "@mui/material": "^5.11.12",
     "@mui/styles": "^5.11.9",
     "@mui/types": "^7.2.3",
+    "@sendgrid/mail": "^7.7.0",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.3.4",
+    "emailjs-com": "^3.2.0",
     "hamburger-react": "^2.5.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.2.0",
@@ -23,6 +28,7 @@
     "react-scrollbars-custom": "^4.1.1"
   },
   "devDependencies": {
+    "@types/node": "^18.14.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
