--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/axios": "^0.14.0",
     "axios": "^1.3.4",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^10.2.4",
     "hamburger-react": "^2.5.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.2.0",
