--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/types": "^7.2.3",
     "@sendgrid/mail": "^7.7.0",
     "@types/axios": "^0.14.0",
+    "@types/react-scroll": "^1.8.6",
     "axios": "^1.3.4",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.2.4",
@@ -26,6 +27,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll": "^1.8.9",
     "react-scrollbars-custom": "^4.1.1"
   },
   "devDependencies": {
