--- a/package.json
+++ b/package.json
@@ -12,31 +12,30 @@
     "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.12",
-    "@mui/styles": "^5.11.9",
+    "@mui/material": "^5.11.13",
+    "@mui/system": "^5.11.13",
     "@mui/types": "^7.2.3",
     "@sendgrid/mail": "^7.7.0",
     "@types/axios": "^0.14.0",
     "@types/react-scroll": "^1.8.6",
     "axios": "^1.3.4",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^10.2.4",
+    "framer-motion": "^10.3.2",
     "hamburger-react": "^2.5.0",
-    "material-ui-icons": "^1.0.0-beta.36",
     "mime": "^3.0.0",
-    "react": "^18.2.0",
+    "polished": "^4.2.2",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.8.9",
     "react-scrollbars-custom": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "^18.14.6",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "gh-pages": "^5.0.0",
+    "react": "^18.2.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
